<resources>
    <string name="app_name">join</string>
    <string name="ID">ID</string>
    <string name="PW">비밀번호</string>
    <string name="simplePW">간단 비밀번호</string>
    <string name="check">비밀번호 확인</string>
    <string name="join">회원가입</string>
    <string name="email">이메일</string>
    <string name="home">home</string>
    <string name="login">로그인</string>
    <string name="find">비밀번호 찾기</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>

</resources>
