<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/emt1"
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:text=""
        android:layout_alignParentTop="true"
        />

    <Button
        android:id="@+id/bt1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/emt1"
        android:layout_centerInParent="true"
        android:text="@string/home"
        android:textColor="#228B22"
        android:textSize="10pt"
        />

    <TextView
        android:id="@+id/emt2"
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:text=""
        android:layout_below="@id/bt1"
        />


    <TextView
        android:id="@+id/idlabel"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="@string/ID"
        android:textSize="20pt"
        android:layout_below="@id/emt2"
        />

    <EditText
        android:id="@+id/idedit"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@id/idlabel"
        android:singleLine="true"
        android:inputType=""
        android:background="#dcdcdc"
        android:hint=""
        />

    <TextView
        android:id="@+id/pwlabel"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="@string/PW"
        android:textSize="20pt"
        android:layout_below="@id/idedit"
        />

    <EditText
        android:id="@+id/pwedit"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@id/pwlabel"
        android:singleLine="true"
        android:inputType=""
        android:background="#dcdcdc"
        android:hint=""
        />

    <TextView
        android:id="@+id/emt3"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:text=""
        android:layout_below="@id/pwedit"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/bt2"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_margin="20dp"
        android:layout_below="@id/pwedit"
        android:layout_toStartOf="@id/emt3"
        android:text="@string/login"
        />

    <Button
        android:id="@+id/bt3"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_margin="20dp"
        android:layout_below="@id/pwedit"
        android:layout_toEndOf="@id/emt3"
        android:text="@string/find"
        />

</RelativeLayout>